# brandpol

./: Persons.csv  README.md  config.py  main.py  pyproject.toml
contollers/: create_csv.py  get_cites.py  parser.py
