[tool.poetry]
name = "brandpol"
version = "0.1.0"
description = ""
authors = ["va.murashev <vladislav3982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
